corrected the alignment of div

--- a/assets/scss/main.css
+++ b/assets/scss/main.css
@@ -439,6 +439,11 @@ hr {
   -moz-transition: all 0.3s ease-in-out 0s;
   -webkit-transition: all 0.3s ease-in-out 0s;
   -o-transition: all 0.3s ease-in-out 0s;
+  
+}
+#services .services-item{
+  height:250px;
+  width:257px;
 }
 
 .services-item .icon {
